tdf#141466 sw: Fix incorrect output after editing Ruby base text

Previously, the Asian Phonetic Guide dialog could scramble base text
during editing due to incorrect handling of PaM after calling
ReplaceRange(). This issue has been fixed. The implementation has also
been modified to allow base text deletion.

Change-Id: I43350272359c7984459aea1604dae0d3f6428cac
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/171934
Tested-by: Jenkins
Reviewed-by: Jonathan Clark <jonathan@libreoffice.org>